--- a/SigaaBiblio/res/values/strings.xml
+++ b/SigaaBiblio/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="nomeSistema">BiblioUFPBMobile</string>
     <string name="title_activity_login">Login</string>
+    <string name="title_activity_busca_livro">BuscaLivroActivity</string>
 
 </resources>
