--- a/SigaaBiblio/res/values/strings.xml
+++ b/SigaaBiblio/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="nomeSistema">BiblioUFPBMobile</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_busca_livro">BuscaLivroActivity</string>
+    <string name="title_activity_resultado_acervo">ResultadoAcervoActivity</string>
+    <string name="title_activity_historico">HistoricoActivity</string>
+    <string name="header_renovacao"> Renovar Empréstimo </string>
+    <string name="title_activity_renovacao">RenovacaoActivity</string>
 
 </resources>
