--- a/SigaaBiblio/res/values/strings.xml
+++ b/SigaaBiblio/res/values/strings.xml
@@ -17,5 +17,9 @@
     <string name="title_activity_situacao_usuario">SituacaoUsuarioActivity</string>
     <string name="titleActivitySituacaoUsuario">Situação do Usuário</string>
     <string name="title_activity_resultado_busca">ResultadoBuscaActivity</string>
-	<string name="header_resultados"> Resultados da Busca</string>
+    <string name="header_resultados"> Resultados da Busca</string>
+    <string name="title_activity_busca_artigo">BuscaArtigo</string> 
+    <string name="title_busca_artigo">Pesquisa de Artigos</string>
+    <string name="text_busca_artigo">Preencha pelo menos um dos campos abaixo</string>
+
 </resources>
