--- a/SigaaBiblio/res/values/strings.xml
+++ b/SigaaBiblio/res/values/strings.xml
@@ -18,6 +18,11 @@
     <string name="titleActivitySituacaoUsuario">Situação do Usuário</string>
     <string name="title_activity_resultado_busca">ResultadoBuscaActivity</string>
     <string name="header_resultados"> Resultados da Busca</string>
+    <string name="header_historico"> Histórico de Empréstimos</string>
+    <string name="prompt_periodo_historico"> Período dos Empréstimos</string>
+    <string name="prompt_periodo_historico_inicial"> Data Inicial:</string>
+    <string name="prompt_periodo_historico_final"> Data Final:</string>
+    <string name="label_gerar_historico"> Consultar Histórico</string>
     <string name="title_activity_busca_artigo">BuscaArtigo</string>
     <string name="title_busca_artigo">Pesquisa de Artigos</string>
     <string name="text_busca_artigo">Preencha pelo menos um dos campos abaixo</string>
@@ -25,7 +30,7 @@
     <string name="title_dados_titulo">Dados do Título</string>
     <string name="title_activity_dados_titulo">DadosTitulo</string>
     <string name="title_activity_exemplares">ExemplaresActivity</string>
-	<string name="title_exemplares">Exemplares de %s</string>
-    
-    
+    <string name="title_exemplares">Exemplares de %s</string>
+    <string name="title_activity_selecionar_historico">SelecionarHistoricoActivity</string>
+
 </resources>
