--- a/SigaaBiblio/res/values/strings.xml
+++ b/SigaaBiblio/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="title_activity_exemplares">ExemplaresActivity</string>
     <string name="title_exemplares">Exemplares de %s</string>
     <string name="title_activity_selecionar_historico">SelecionarHistoricoActivity</string>
+    <string name="title_activity_historico_emprestimos">HIstoricoEmprestimosActivity</string>
 
 </resources>
