--- a/SigaaBiblio/res/values/strings.xml
+++ b/SigaaBiblio/res/values/strings.xml
@@ -34,5 +34,14 @@
     <string name="title_activity_selecionar_historico">SelecionarHistoricoActivity</string>
     <string name="title_activity_historico_emprestimos">HIstoricoEmprestimosActivity</string>
     <string name="titleHistorico">Historico de Empréstimos</string>
+    
+    <string name="lembrar">Lembrar Usuário</string>
+	<string name="lembrar_texto">Realiza login automático</string>
+	<string name="cor">Cor Alternativa</string>
+	<string name="cor_texto">Muda esquema de cores</string>
+	<string name="guardarHist">Histórico Local</string>
+	<string name="guardar_texto">Guarda o histórico de emprestimos no celular</string>
+	
+	
 
 </resources>
