--- a/SigaaBiblio/res/values/strings.xml
+++ b/SigaaBiblio/res/values/strings.xml
@@ -42,6 +42,9 @@
 	<string name="guardarHist">Histórico Local</string>
 	<string name="guardar_texto">Guarda o histórico de emprestimos no celular</string>
 	
+	<string name="guardarPesquisas">Histórico Local</string>
+	<string name="pesquisas_texto">Guarda o histórico de pesquisas realizadas no celular</string>
+	
 	
 
 </resources>
