--- a/SigaaBiblio/res/values/strings.xml
+++ b/SigaaBiblio/res/values/strings.xml
@@ -34,17 +34,23 @@
     <string name="title_activity_selecionar_historico">SelecionarHistoricoActivity</string>
     <string name="title_activity_historico_emprestimos">HIstoricoEmprestimosActivity</string>
     <string name="titleHistorico">Historico de Empréstimos</string>
-    <string name="lembrar">Lembrar Usuário</string>
-    <string name="lembrar_texto">Realiza login automático</string>
-    <string name="cor">Cor Alternativa</string>
-    <string name="cor_texto">Muda esquema de cores</string>
-    <string name="guardarHist">Histórico Local</string>
-    <string name="guardar_texto">Guarda o histórico de emprestimos no celular</string>
-    <string name="guardarPesquisas">Histórico Local</string>
-    <string name="pesquisas_texto">Guarda o histórico de pesquisas realizadas no celular</string>
     <string name="title_activity_resultado_busca_artigoctivity">ResultadoBuscaArtigoctivity</string>
     <string name="title_activity_exemplar_artigo">ExemplarArtigoActivity</string>
     <string name="exemplar_artigo">Exemplar</string>
     <string name="title_activity_renovacao_error">RenovacaoErrorActivity</string>
 
+    <!-- Preferências -->
+    <string name="configuracoes_title" > Configurações</string>
+    <string name="configuracoes_atalho">s</string>
+    <string name="lembrar">Lembrar Usuário</string>
+    <string name="lembrar_texto">Realiza login automático</string>
+    <string name="cor">Cor Alternativa</string>
+    <string name="cor_texto">Muda esquema de cores</string>
+    <string name="guardarHist">Recuperar Histórico</string>
+    <string name="guardar_texto">Recuperar a ultimo histórico de emprestimos consultado</string>
+    <string name="guardarCamposPesquisas">Salvar Campos de Pesquisa </string>
+    <string name="pesquisas_texto">Recuperar os campos utilizados na ultima consulta</string>
+   	<string name="guardarPesquisa">Recuperar Pesquisa</string>
+    <string name="guardar_pesquisa_texto">Recuperar a ultima pesquisa realizada</string>
+    
 </resources>
