--- a/SigaaBiblio/res/values/strings.xml
+++ b/SigaaBiblio/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SigaaBibilo</string>
+    <string name="app_name">SigaaBiblio</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="nomeSistema">BiblioUFPBMobile</string>
@@ -55,5 +55,6 @@
     <string name="guardarRenovacao">Registro de Renovação</string>
     <string name="guardar_renovacao_texto">Manter um registro das renovações realizadas</string>
     <string name="title_activity_registro_renovacoes">RegistroRenovacoesActivity</string>
+    <string name="title_activity_maps">MapsActivity</string>
 
 </resources>
